--- a/exercicios/ex020/iframe002.html
+++ b/exercicios/ex020/iframe002.html
@@ -18,7 +18,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae omnis suscipit libero quam labore beatae, nesciunt dolorum impedit, facilis cumque ut nulla tenetur. Adipisci perferendis officiis doloribus? Pariatur, quis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed corrupti id placeat? Deserunt ea, excepturi rerum consequuntur, facere eius dolorem quaerat saepe vero qui et quo unde repellat perferendis ducimus!</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo delectus hic voluptas ipsa quisquam sunt consequuntur omnis, vitae rem quod, quidem, quam quos. Nihil porro corporis dolore maxime, sequi voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ad aliquam aut quae! Necessitatibus suscipit ex sapiente quod soluta harum dicta consequuntur facilis tenetur rem, iste laudantium fugiat delectus non.</p>
 </body>
