--- a/exercicios/ex020/iframe003.html
+++ b/exercicios/ex020/iframe003.html
@@ -27,7 +27,8 @@
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta exercitationem repudiandae velit obcaecati expedita. Excepturi nihil, quas assumenda amet odio minus vel sequi expedita hic, labore temporibus sit deserunt quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis soluta quos quia velit itaque repellat cum odio explicabo distinctio optio praesentium harum, tempore maiores quidem expedita recusandae. Nihil, neque nulla.</p>
-    <iframe id="tela" name="frame" src="">
+    <!--o srcdoc faz com que você possa escrever codigo html dentro dele, colocar imagens...-->
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 </body>
