--- a/exercicios/ex021/form006.html
+++ b/exercicios/ex021/form006.html
@@ -14,7 +14,11 @@
         </p>
         <p>
             <label for="inivel">Nivel de Satisfação:</label>
-            <input type="range" name="range" id="inivel">
+            <input type="range" name="range" id="inivel" min="1" max="5" value="2">
+        </p>
+        <p>
+            <label for="ifoto">Foto de perfil</label>
+            <input type="file" name="foto" id="ifoto">
         </p>
         <p>
             <input type="submit" value="Enviar">
