Atualizei o exercicio de media queries

--- a/exercicios/ex022/imagens/mq001/index.html
+++ b/exercicios/ex022/imagens/mq001/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
     <header>
         <h1>Noticias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Politica</li>
+                <li>Tecnologia</li>
+            </ul>
+
+        </menu>
     </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar media Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, natus. Molestias nesciunt ut quibusdam id aliquam facilis dicta quae cupiditate, vel, quaerat cumque dolorem vitae, quas similique aliquid maiores qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam culpa quis soluta, mollitia repudiandae amet, ad et consectetur assumenda temporibus accusantium eos veniam, odio nesciunt error provident quaerat optio quasi!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, natus. Molestias nesciunt ut quibusdam id aliquam facilis dicta quae cupiditate, vel, quaerat cumque dolorem vitae, quas similique aliquid maiores qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam culpa quis soluta, mollitia repudiandae amet, ad et consectetur assumenda temporibus accusantium eos veniam, odio nesciunt error provident quaerat optio quasi!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, natus. Molestias nesciunt ut quibusdam id aliquam facilis dicta quae cupiditate, vel, quaerat cumque dolorem vitae, quas similique aliquid maiores qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam culpa quis soluta, mollitia repudiandae amet, ad et consectetur assumenda temporibus accusantium eos veniam, odio nesciunt error provident quaerat optio quasi!</p>
+        </article>
+    </main>
 </body>
 </html>
